# django_consult_412

./: .env.example  .gitignore  ai_log.md  data.json  db.sqlite3-journal  notes.md  pyproject.toml  requirements.txt
.clinerules/: context7-doc-search-strategy.md
.github/workflows/: deploy.yml
barbershop/: settings.py  urls.py
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_post_html_description_post_md_description.py
core/: admin.py  apps.py  context_processors.py  data.py  forms.py  mistral.py  models.py  signals.py  sitemaps.py  telegram_bot.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_master_alter_order_phone.py  0002_remove_order_date_order_date_created_and_more.py  0003_order_master.py  0003_order_services_2.py  0004_alter_master_photo.py  0004_rename_services_2_order_services_22.py  0005_alter_order_master.py  0006_service_master_services.py  0007_alter_service_options_alter_master_photo_and_more.py  0009_order_services.py  (+7 more)
notes/: blog_comments_approaches.md  lesson_41.md  lesson_42.md  lesson_43.md  lesson_44.md  lesson_45.md  lesson_46.md  lesson_48.md  lesson_49.md  lesson_50.md  lesson_51.md  lesson_53.md  lesson_60.md  lesson_61.excalidraw  lesson_62.md  lesson_63.md  lesson_63_forms.md  lesson_63_masters.md  lesson_64.md  lesson_65.md  lesson_66.md  lesson_67.md  likes_implementation_options.md  mixins.md  notes.md  q2.md  user_cab.excalidraw
static/: robots.txt
templates/: base.html  nav_menu_include.html  test.html  thanks.html
users/: admin.py  forms.py  models.py  urls.py  views.py
(+42 files in other folders)
