[project]
name = "django-consult-412"
version = "0.1.0"
description = ""
authors = [
    {name = "VladimirMonin",email = "vladimir.monin2016@yandex.ru"}
]
readme = ""
requires-python = "^3.13.2"
dependencies = [
    "django (>=5.1.7,<6.0.0)",
    "mistralai (>=1.5.1,<2.0.0)",
    "markdown (>=3.7,<4.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "django-extensions (>=4.0,<5.0)",
    "pillow (>=11.1.0,<12.0.0)",
    "django-debug-toolbar (>=5.1.0,<6.0.0)",
    "python-telegram-bot (>=22.1,<23.0)",
    "django-jazzmin (>=3.0.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
